--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="title_activity_main">UniHub</string>
     <string name="package_name">com.unihub.app</string>
     <string name="custom_url_scheme">com.unihub.app</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
+    <string name="app_widget_description">This is an app widget description</string>
 </resources>
